[package]
name = "lance-rle-benchmark"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "main"
harness = false

[dependencies]
lance = { package = "lance", git = "https://github.com/Xuanwo/lance", rev = "1856e2d" }
lance-core = { package = "lance-core", git = "https://github.com/Xuanwo/lance", rev = "1856e2d" }
lance-table = { package = "lance-table", git = "https://github.com/Xuanwo/lance", rev = "1856e2d" }
lance-io = { package = "lance-io", git = "https://github.com/Xuanwo/lance", rev = "1856e2d" }
lance-file = { package = "lance-file", git = "https://github.com/Xuanwo/lance", rev = "1856e2d" }
lance-encoding = { package = "lance-encoding", git = "https://github.com/Xuanwo/lance", rev = "1856e2d" }
object_store = "0.12.0"
parquet = "55.2.0"
arrow = "55.2.0"
arrow-array = "55.2.0"
arrow-schema = "55.2.0"
arrow-select = "55.2.0"
bytes = "1.8.0"
rand = "0.8.5"
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3.31"

[dev-dependencies]
divan = "0.1.15"
